Temporarily save unfinished search/replace text

The unsaved text can be accessed by pressing the up arrow key
right past the latest entry in the history and is only available
until the search bar is closed.

BUG: 411923